codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__default_unified_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"› @sa                                                                                               "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"> Sample Plugin   Plugin with skills and an MCP server                                        Plugin"
"  other (sample)  Example skill used in tests.                                                Skill "
"  notes (sample)  Example skill used in tests.                                                Skill "
"                                                                                                    "
"  enter insert · esc close · ←/→ switch search modes     [All Results]   Filesystem Only    Plugins "
